Made buttons for home page.

--- a/main_page.html
+++ b/main_page.html
@@ -4,10 +4,9 @@
         <link rel="stylesheet" href="main_page.css">
     </head>
     <div class="flex-container">
-        <div><button class="button">Home</button></div>
-        <div><button class="button">About</button></div>
-        <div><button class="button">Top Achievements</button></div>
-        <div><button class="button">Socials</button></div>
-        <div><button class="button">Contact Me</button></div>
+        <!--Make 3 Buttons. This is the home screen.-->
+        <div><button class="button">About Me</button></div>
+        <div><button class="button">Tournaments</button></div>
+        <div><button class="button">Photos</button></div>
     </div>
-</html>
+</html>     
