Made categories and general idea of web page

--- a/main_page.html
+++ b/main_page.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="main_page.css">
     </head>
+    
+    <title>Wailly Mohamed Portfolio</title>
     <div class="flex-container">
         <!--Make 3 Buttons. This is the home screen.-->
-        <div><button class="button">About Me</button></div>
-        <div><button class="button">Tournaments</button></div>
-        <div><button class="button">Photos</button></div>
+        <div><a href="#about">About Me</a></div>
+        <div><a href="#education">Education</button></div>
+        <div><a href="#experience">Experience</button></div>
+        <div><a href="#socials">Contact</button></div>
+    </div>
+
+    <div class="Portfolio">
+        <h1>My Portfolio</h1>
     </div>
 </html>     
