Fixed an error on html tag with button/ <a>

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="page-select">
         <!--Make 3 Buttons. This is the home screen.-->
         <a href="#about">About Me</a>
-        <a href="#education">Education</button>
-        <a href="#experience">Experience</button>
-        <a href="#socials">Contact</button>
+        <a href="#education">Education</a>
+        <a href="#experience">Experience</a>
+        <a href="#socials">Contact</a>
     </div>
     <div class="portfolio-title">
         <h1>Wailly Mohamed</h1>
