Further changes to the section coloring. Added skills section and fixed some page coloring. Removed borders from page-select and portfolio-title sections.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <a href="#about">About Me</a>
         <a href="#education">Education</a>
         <a href="#experience">Experience</a>
-        <a href="#socials">Contact</a>
+        <a href="#skills">Skills</a>
+        <a href="#socials">Contact Me</a>
     </div>
     <div class="portfolio-title">
         <h1>Wailly Mohamed</h1>
