Added images to the main page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <p>At the moment I am completing a Co-op Work Term at Innovapost as a Technical Specialist!</p>
             <p>I really like Shawarma and Capybaras. Also Cheesecake~</p>
             <p>I also play some games here and there.</p>
+            <div class="logos">
+                <img src="images/CarletonUniversityLogo.png">
+                <img src="images/Innovapost.jpg">
+            </div>
         </div>    
     </div>
 
