--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="main_page.css">
+        <link rel="stylesheet" href="css/main_page.css">
+        <link rel="stylesheet" href="css/about_page.css">
     </head>
     
     <title>Wailly Mohamed Portfolio</title>
