--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>Hello there, I'm Wailly!</p>
             <p>I was born in Mississauga, raised in Brampton, and am currently studying in Ottawa!  
             I am a Third Year Undergraduate student at Carleton University, in the Bachelor's of Computer Science program. </p>
-            <p>At the moment I am completing a Co-op Work Term at Innovapost as a Technical Specialist!</p>
+            <p>At the moment, I am completing a Co-op Work Term at Innovapost as a Technical Specialist!</p>
             <p>I really like Shawarma and Capybaras. Also Cheesecake~</p>
             <p>I also play some games here and there.</p>
             <div class="logos">
