--- a/education.html
+++ b/education.html
@@ -12,7 +12,7 @@
         <!--Make 3 Buttons. This is the home screen.-->
         <a href="#about">About Me</a>
         <a href="#education">Education</a>
-        <a href="#experience">Experience</a>
+        <a href="experience.html">Experience</a>
         <a href="#skills">Skills</a>
         <a href="#socials">Contact Me</a>
     </div>
