More testing with switching pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page-select">
         <!--Make 3 Buttons. This is the home screen.-->
         <a href="#about">About Me</a>
-        <a href="#education">Education</a>
+        <a href="education.html">Education</a>
         <a href="experience.html">Experience</a>
         <a href="#skills">Skills</a>
         <a href="#socials">Contact Me</a>
