--- a/education.html
+++ b/education.html
@@ -10,8 +10,8 @@
     
     <div class="page-select">
         <!--Make 3 Buttons. This is the home screen.-->
-        <a href="#about">About Me</a>
-        <a href="#education">Education</a>
+        <a href="index.html">About Me</a>
+        <a href="education.html">Education</a>
         <a href="experience.html">Experience</a>
         <a href="#skills">Skills</a>
         <a href="#socials">Contact Me</a>
