--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <a href="#about">About Me</a>
         <a href="education.html">Education</a>
         <a href="experience.html">Experience</a>
-        <a href="#skills">Skills</a>
-        <a href="#socials">Contact Me</a>
+        <a href="skills.html">Skills</a>
+        <a href="contact.html">Contact Me</a>
     </div>
     <div class="portfolio-title">
         <h1>About Me</h1>
