--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#about">About</a>
             <a href="#education">Education</a>
             <a href="#experience">Experience</a>
-            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
         </nav>
         </header>
     
