Updated Experience section
Spacing on the work experience and format has been updated.

Future updates:
- Revise the format to include image of the logo for the company.
- Add Projects.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             with a strong foundation in software development, data-driven applications, and modern web technologies.</p>
                     </div>
                 
-
+                    <br> 
                     <div class="contact">
                         <a href="https://www.linkedin.com/in/wailly-mohamed/">
                             <ion-icon name="logo-linkedin" size="large"></ion-icon>
@@ -152,24 +152,36 @@
                 </section>
 
                 <section id="experience">
-                    <h2>Work Experience<hr></h2>
-                    <div class="work">
-                        <p>Innovapost</p>
-                        <p id="loc">Ottawa, ON</p>
-                        <div class="role"> 
+                    <h2>EXPERIENCE<hr></h2>
+                    <div class="school">
                         <p>Technical Specialist</p>
-                        <p id="loc">January-April 2024</p>
-                            <ul>
-                                <li>Assisted the Technical Team with code remediation, code compare and upgrading legacy code.</li>
-                                <li>Worked on the Experience Transformation Program with the Information Technology team at Innovapost, focusing on the technical upgrade from the legacy SAP system to the new SAP system. </li>
-                            </ul>
-                        </div>  
+                        <p>January - April 2024</p>
                     </div>
+                    <div class="program"> 
+                        <p>Innovapost</p>
+                        <p>Kanata, ON</p>
+                    </div>  
+                    <ul>
+                        <li>Supported ERP system modernization initiatives on SAP Business Technology Platform (BTP), analyzing legacy integration flows and assisting with system configuration documentation.</li>
+                        <li>Collaborated with business and technical stakeholders to document workflows, functional requirements, and system changes supporting enterprise processes. </li>
+                        <li>Assisted with testing and validation of system updates, ensuring accuracy, data integrity, and readiness for deployment.</li>
+                        <li>Contributed to Agile sprint activities, tracking issues, supporting troubleshooting efforts, and communicating progress across teams.</li>
+                    </ul>
 
-
+                    <div class="school">
+                        <p>Carleton Computer Science Society Volunteer</p>
+                        <p>September 2025 - December 2025</p>
+                    </div>
+                    <div class="program"> 
+                        <p>Carleton University</p>
+                        <p>Ottawa, ON</p>
+                    </div>  
+                    <ul>
+                        <li>Interacted directly with students and faculty, providing support and resolving questions in a fast-paced environment. </li>
+                        <li>Managed inventory tracking and restocking, reinforcing attention to operational processes and data accuracy.  </li>
+                        <li>Supported a welcoming community environment through clear communication and collaboration.</li>
+                    </ul>
                 </section>
-
-
 
             </div>    
         </div>
